Fixing some static HTML

--- a/templates/addtask.html
+++ b/templates/addtask.html
@@ -14,8 +14,8 @@
     <div class="container">
         <div class="row navbar mt-3 ml-5 ml-md-0">
             <div class="col-12">
-                <p class="heading mt-3">Welcome back, John!</p>
-                <p class="sub-heading">You have 2 tasks pending.</p>
+                <p class="heading mt-3">Hey, {{ name }}</p>
+                <p class="sub-heading">Add a {{ act }} task</p>
             </div>
         </div>
         <div class="row mt-5">
